[package]
name = "crustopals"
version = "0.1.0"
authors = ["jackvnimble <jack.wilson.v@gmail.com>"]

[dependencies]
byteorder = "*"
rand = "*"
hex = "0.3.1"
base64 = "0.9.3"
lazy_static = "1.1.0"
md4 = "*"

[dependencies.sha1]
git = "https://github.com/id4ho/rust-sha1"
branch = "crustopals"
features = ["std"]
